#12 🔐 Gera token via login + protege rotas
